# happymeter

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamlfmt.yml  .yamllint.yml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  app.py  containerapp.yaml  deploy_aks.sh  deploy_azure.sh  deploy_containerapp.sh  deploy_webapp.sh  docker-compose-aks.yml  docker-compose-azure.yml  docker-compose.yml  environment.yml  happy_data.csv  happy_model.pkl  iris_model.pkl  model.py  pyproject.toml  requirements.backend.txt  requirements.frontend.txt  requirements.txt  run.sh  test.db  tests.py
.github/: dependabot.yml
.github/workflows/: build-container.yml  build.yml  codeql.yml  compose.yml  dependency-review.yml  publish-package.yml  publish.yml
.streamlit/: config.toml
infra/: load_env.bat  main.tf  outputs.tf  provider.tf  variables.tf
k8s/: backend-deployment.yaml  backend-service.yaml  dnsutils.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  postgres-deployment.yaml  postgres-service.yaml
reports/coverage/: index.html
src/app/: Dockerfile  app.py  database.py  environment.yml  logger.py  main.py  model.py  run.sh
src/model/: happy_model.pkl
src/static/css/: style.css
src/static/js/: script.js
src/streamlit/: Dockerfile  ui.py
src/templates/: data.html  index.html  measurements.html
src/tests/: test_app.py  test_database.py  test_main.py  test_model.py  test_ui.py
