[project]
name = "happymeter"
version = "4.0.1"
description = "Find out how happy you are"
authors = [
    {name = "Klim Mikhailov", email = "mixklim@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "==3.12.*"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.8.0,<26.0.0",
    "flake8==4.0.1",
    "isort==7.0.0",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pip-tools==7.5.2",
    "pytest>=8.3.3,<10.0.0",
    "pytest-cov==7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "requests-mock>=1.12.1,<2.0.0",
    "pytest-asyncio>=0.24.0,<2.0.0",
    "ipykernel>=6.29.5,<8.0.0",
    "genbadge[coverage]>=1.1.1,<2.0.0",
]
frontend = [
    "st-star-rating==0.0.6",
    "streamlit>=1.38.0,<2.0.0",
]
backend = [
    "altair==6.0.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "build==1.3.0",
    "cachetools==6.2.5",
    "certifi>=2024.8.30,<2026.0.0",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "coverage==7.13.1",
    "distlib==0.4.0",
    "exceptiongroup==1.3.1",
    "fastapi>=0.115.2,<1.0.0",
    "filelock==3.20.3",
    "gitdb==4.0.12",
    "gitpython>=3.1.43,<4.0.0",
    "h11>=0.16.0,<1.0.0",
    "httpcore>=1.0.9,<2.0.0",
    "httpx==0.28.1",
    "identify==2.6.15",
    "idna>=3.10,<4.0",
    "importlib-metadata==8.7.1",
    "iniconfig==2.3.0",
    "jinja2>=3.1.6,<4.0.0",
    "joblib==1.5.3",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mccabe==0.6.1",
    "mdurl==0.1.2",
    "nodeenv==1.10.0",
    "numpy==2.4.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "pathspec==0.12.1",
    "pillow>=10.4.0,<13.0.0",
    "pip-chill==1.0.3",
    "platformdirs==4.5.1",
    "pluggy>=1.3.0,<2.0.0",
    "protobuf==6.33.2",
    "pyarrow==22.0.0",
    "pycodestyle==2.8.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pyproject-hooks==1.2.0",
    "pytz==2023.3.post1",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests>=2.32.3,<3.0.0",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "scikit-learn>=1.5.2,<2.0.0",
    "scipy==1.16.2",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "starlette>=0.40.0",
    "tenacity==8.2.3",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tomli==2.4.0",
    "toolz==1.1.0",
    "tornado==6.5.4",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3>=2.2.3,<3.0.0",
    "uvicorn==0.40.0",
    "validators==0.35.0",
    "virtualenv==20.36.1",
    "watchdog==6.0.0",
    "zipp>=3.20.2,<4.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
]

[tool.uv]
default-groups = []

[tool.pdm.build]
includes = ["src/app"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = [
    "attr-defined"
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
