[project]
name = "happymeter"
version = "5.0.2"
description = "Find out how happy you are"
authors = [
    {name = "Klim Mikhailov", email = "mixklim@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "==3.12.*"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.8.0,<27.0.0",
    "flake8==4.0.1",
    "isort==8.0.1",
    "mypy==1.20.2",
    "pre-commit==4.5.1",
    "pip-tools==7.5.3",
    "pytest>=8.3.3,<10.0.0",
    "pytest-cov==7.1.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "requests-mock>=1.12.1,<2.0.0",
    "pytest-asyncio>=0.24.0,<2.0.0",
    "ipykernel>=6.29.5,<8.0.0",
    "genbadge[coverage]>=1.1.1,<2.0.0",
]
frontend = [
    "st-star-rating==0.0.6",
    "streamlit>=1.38.0,<2.0.0",
]
backend = [
    "fastapi>=0.115.2,<1.0.0",
    "uvicorn==0.42.0",
    "jinja2>=3.1.6,<4.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "joblib==1.5.3",
    "pandas==3.0.2",
    "pydantic==2.13.3",
    "scikit-learn>=1.5.2,<2.0.0",
    "httpx==0.28.1",
]

[tool.uv]
default-groups = []

[tool.pdm.build]
includes = ["src/app"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = [
    "attr-defined"
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
